2004-11-12  Stuart Parmenter  <pavlov@pavlov.net>
	* src/cairo_gdip_font.cpp:
	* src/cairo_gdip_surface.cpp: Added GDI+ backend to Cairo.

2004-11-12  Carl Worth  <cworth@cworth.org>

	* src/cairo_font.c (_font_cache_hash, _font_cache_create_entry): 
	* src/cairo_ft_font.c (_cairo_ft_font_text_to_glyphs): Move
	declarations above statements to satisfy pre-C99 compilers. Thanks
	to Michael Johnson <ahze@ahze.net>.

2004-11-09  Carl Worth  <cworth@cworth.org>

	* test/text_rotate.c (NUM_TEXT): Increase size and increase number
	of different angles drawn.
	(draw): Fix broken usage of extents (missing bearings), add
	stroked bounding box (shifted out by 0.5 units to just abut the
	text), and increase position adjustments to make room for this
	larger box.
	(draw): Move x_off, y_off calculation outside of loop to emphasize
	loop-independence.

2004-11-08  Dave Beckett  <Dave.Beckett@bristol.ac.uk>

	* configure.in: require libpixman 0.1.2 since
	src/cairo_glitz_surface.c depends on two new functions of 0.1.2 -
	pixman_format_get_masks and pixman_image_get_format

2004-11-05  Graydon Hoare  <graydon@redhat.com>

	* src/cairo_ft_font.c: Change the signs of a variety of 
	metrics, which were backwards.
	* src/cairo_gstate.c (_cairo_gstate_clip): Return early if we 
	found a rectangular clip at all, not just in error case.
	* src/cairo_xlib_surface.c 
	(_xlib_glyphset_cache_create_entry): Give render glyphset entry the
	negative bbox offsets it wants, not the bearings.

2004-11-04  Carl Worth  <cworth@cworth.org>

	* test/text_cache_crash.c: Add new test demonstrating assertion
	failure in cairo_cache_lookup.

	* test/text_rotate.c: Add new test showing problems with rotated
	text.

2004-11-04  David Reveman  <c99drn@cs.umu.se>

	* src/cairo_glitz_surface.c (cairo_set_target_glitz): 
	cairo_glitz_surface_create now takes a reference to the glitz
	surface, so it shouldn't be done here anymore.
	Removed feature_mask from cairo_glitz_surface_t.